@@ -1,3 +1,4 @@
+2022-11-08: [FEATURE] Add improvements to `StatusNotifier` menus
 2022-11-07: [FEATURE] Add ability to resize icons in `ALSAWidget` 
 2022-11-06: [BUGFIX] `WiFiIcon` internet check handles other exceptions
 2022-11-05: [BUGFIX] Hide `LiveFootballScores` widget when no match
